[project]
name = "psmiles"
version = "0.6.11"
description = "A Python package for working with PSMILES (polymer SMILES) strings."
authors = [
    { name = "Christopher Kuenneth", email = "christopher.kuenneth@gmail.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = ["science", "polymer", "SMILES"]
dependencies = [
    "canonicalize-psmiles",
    "numpy>=2.1",
    "pandas>=2.3.3",
    "rdkit>=2025.9.1",
    "scikit-learn>=1.3.2",
]

[project.urls]
Repository = "https://github.com/kuennethgroup/psmiles"

[project.optional-dependencies]
polybert = ["sentence-transformers>=2.7.0"]
docs = [
    "mkdocstrings[python]>=0.19.0,<0.20",
    "mkdocs>=1.4.2,<2",
    "mkdocs-material>=8.5.11,<9",
    "mkdocstrings-python>=0.8.2,<0.9",
    "mkdocs-jupyter>=0.22.0,<0.23",
]

[dependency-groups]
dev = [
    "black>=22.12.0",
    "ipykernel>=6.31.0",
    "pre-commit>=2.21.0",
    "pytest>=7.4.4",
]


[tool.uv]

[tool.uv.sources]
canonicalize-psmiles = { git = "https://github.com/Ramprasad-Group/canonicalize_psmiles.git" }

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
